Removed the GRID element from the engine page.

--- a/WkXamarinTinyEngine/Pages/EnginePage.xaml
+++ b/WkXamarinTinyEngine/Pages/EnginePage.xaml
@@ -21,15 +21,13 @@
                             HeightRequest="{TemplateBinding BindingContext.DeviceScreenHeight}"
                             WidthRequest="{TemplateBinding BindingContext.DeviceScreenWidth}">
 
-                    <Grid BackgroundColor="#222222"
+                    <ContentPresenter />
+
+                    <!--<Grid BackgroundColor="#222222"
                           HeightRequest="{TemplateBinding BindingContext.DeviceScreenHeight}"
                           WidthRequest="{TemplateBinding BindingContext.DeviceScreenWidth}"
                           RowDefinitions="Auto"
-                          ColumnDefinitions="Auto">
-
-                        <ContentPresenter />
-
-                    </Grid>
+                          ColumnDefinitions="Auto"></Grid>-->
                 </ScrollView>
             </ControlTemplate>
         </ResourceDictionary>
